<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <groupId>de.dfki.mlt</groupId>
  <artifactId>vonda</artifactId>
  <version>3.0-SNAPSHOT</version>
  <packaging>jar</packaging>

  <properties>
    <encoding>UTF-8</encoding>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
    <vonda.version>3.0</vonda.version>
    <slf4j.version>2.0.5</slf4j.version>
    <logback.version>1.4.5</logback.version>
    <google-java-format.version>1.15.0</google-java-format.version>
  </properties>

  <repositories>
    <repository>
      <id>project_local</id>
      <name>project_local</name>
      <url>file://${project.basedir}/repo</url>
    </repository>
  </repositories>

  <dependencies>
    <dependency>
      <groupId>net.sf.jopt-simple</groupId>
      <artifactId>jopt-simple</artifactId>
      <version>5.0.2</version>
    </dependency>

    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.2</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>de.dfki.lt.hfc</groupId>
      <artifactId>hfc</artifactId>
      <version>1.4.2</version>
      <type>jar</type>
    </dependency>

    <dependency>
      <groupId>com.ibm.icu</groupId>
      <artifactId>icu4j</artifactId>
      <version>55.1</version>
    </dependency>

    <dependency>
      <groupId>de.dfki.mlt</groupId>
      <artifactId>cplan-ccg</artifactId>
      <version>1.2.4</version>
      <type>jar</type>
    </dependency>

    <dependency>
      <groupId>de.dfki.mlt</groupId>
      <artifactId>cplan-core</artifactId>
      <version>1.2.4</version>
      <type>jar</type>
    </dependency>

    <dependency>
      <groupId>de.dfki.mlt</groupId>
      <artifactId>dataviz</artifactId>
      <version>0.1-SNAPSHOT</version>
    </dependency>

    <dependency>
      <groupId>org.yaml</groupId>
      <artifactId>snakeyaml</artifactId>
      <version>1.32</version>
    </dependency>

    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>${slf4j.version}</version>
      <type>jar</type>
    </dependency>

    <!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-classic</artifactId>
      <version>1.4.5</version>
      <scope>runtime</scope>
    </dependency>

    <dependency>
      <groupId>net.sf.trove4j</groupId>
      <artifactId>trove4j</artifactId>
      <version>3.0.3</version>
      <type>jar</type>
    </dependency>

    <dependency>
      <groupId>org.json</groupId>
      <artifactId>json</artifactId>
      <version>20220320</version>
    </dependency>

    <dependency>
      <groupId>de.dfki.mlt</groupId>
      <artifactId>srgs-parser</artifactId>
      <version>1.3.3</version>
    </dependency>

    <dependency>
      <groupId>com.google.googlejavaformat</groupId>
      <artifactId>google-java-format</artifactId>
      <version>${google-java-format.version}</version>
    </dependency>
  </dependencies>

  <!-- use .java files provided from repo as default -->
  <!--
  <profiles>
    <profile>
      <id>platform-unix</id>
      <activation>
        <os>
          <family>unix</family>
        </os>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>exec-maven-plugin</artifactId>
            <version>1.1</version>
            <executions>
              <execution>
                <id>makebisonflex</id>
                <phase>generate-sources</phase>
                <goals><goal>exec</goal></goals>
                <configuration>
                  <workingDirectory>${project.build.sourceDirectory}/de/dfki/mlt/rudimant/compiler/io</workingDirectory>
                  <executable>make</executable>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
  -->

  <build>
    <plugins>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>0.8.5</version>
        <executions>
          <execution>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
          <execution>
            <id>report</id>
            <phase>prepare-package</phase>
            <goals>
              <goal>report</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>2.5.3</version>
        <executions>
          <execution>
            <id>fat-jar</id>
            <phase>package</phase>
            <goals>
              <goal>single</goal>
            </goals>
            <configuration>
              <finalName>vonda-${vonda.version}-compiler</finalName>
              <attach>false</attach>
              <appendAssemblyId>false</appendAssemblyId>
              <archive>
                <manifest>
                  <mainClass>de.dfki.mlt.rudimant.compiler.CompilerMain</mainClass>
                </manifest>
              </archive>
              <descriptors>
                <descriptor>src/assembly/fatjar.xml</descriptor>
              </descriptors>
              <!--<descriptorRefs>
                <descriptorRef>jar-with-dependencies</descriptorRef>
              </descriptorRefs>-->
            </configuration>
          </execution>
          <execution>
            <id>src-dist-archive</id>
            <phase>package</phase>
            <goals>
              <goal>single</goal>
            </goals>
            <configuration>
              <descriptors>
                <descriptor>src/assembly/src.xml</descriptor>
              </descriptors>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <!--<plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.2.1</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
            <configuration>
              <build>
                <finalName>vonda-2-compiler</finalName>
              </build>
              <artifactSet>
                <excludes>
                  <exclude>junit:junit</exclude>
                  <exclude>de.dfki.mlt:vonda-runtime</exclude>
                </excludes>
              </artifactSet>
              <transformers>
                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                  <mainClass>de.dfki.mlt.rudimant.compiler.CompilerMain</mainClass>
                </transformer>
              </transformers>
            </configuration>
          </execution>
        </executions>
      </plugin>-->

      <plugin>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.2.0</version>
        <executions>
          <execution>
            <id>runtime</id>
            <phase>package</phase>
            <goals>
              <goal>jar</goal>
            </goals>
            <configuration>
              <includes>
                <include>**/agent/**/*</include>
                <include>**/common/*</include>
              </includes>
            </configuration>
          </execution>
          <!--<execution>
            <phase>package</phase>
            <id>compiling</id>
            <goals>
              <goal>jar</goal>
            </goals>
            <configuration>
              <classifier>compiling</classifier>
              <includes>
                <include>**/compiler/**/*</include>
                <include>**/common/*</include>
              </includes>
            </configuration>
          </execution>

          put the default-jar in the none phase to skip it from being created -->
          <execution>
            <id>default-jar</id>
            <phase>none</phase>
          </execution>
        </executions>
        <!-- -->
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.22.2</version>
        <configuration>
          <systemPropertyVariables>
            <org.slf4j.simpleLogger.defaultLogLevel>warn</org.slf4j.simpleLogger.defaultLogLevel>
          </systemPropertyVariables>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-clean-plugin</artifactId>
        <version>2.4.1</version>
        <configuration>
          <filesets>
            <fileset>
              <directory>src/main/resources/generated</directory>
              <includes>
                <include>**/*</include>
              </includes>
              <followSymlinks>false</followSymlinks>
            </fileset>
            <fileset>
              <directory>src/test/resources/miniproj/src/main/generated</directory>
              <includes>
                <include>**/*</include>
              </includes>
              <followSymlinks>false</followSymlinks>
            </fileset>
            <fileset>
              <directory>src/test/resources/miniproj/target</directory>
              <includes>
                <include>**/*</include>
              </includes>
              <followSymlinks>false</followSymlinks>
            </fileset>
          </filesets>
        </configuration>
      </plugin>
    </plugins>
  </build>

</project>
